Add SMMU subsystem to Zephyr
Related to #60289

Add a new SMMU demo readme and integrate the subsystem with existing Zephyr DMA drivers.

* **Add SMMU demo readme**:
  - Add `samples/hello_world/smmu_readme.md` with instructions for building, running, and debugging the SMMU demo.
  - Include an example of using the new APIs for device isolation.
  - Add sections explaining how to integrate the subsystem with existing Zephyr DMA drivers, handle multiple DMA devices on a single thread, discuss security implications, and handle DMA devices with different isolation technologies.

* **Integrate subsystem with existing Zephyr DMA drivers**:
  - Modify `drivers/dma/dma_dw_axi.c` to include necessary headers for the new APIs.
  - Add `include/dma.h` with the new APIs for device isolation.
  - Update `dts/bindings/dma/snps,designware-dma-axi.yaml` to include `iommus` property for device isolation.
  - Add a test case in `tests/drivers/dma/chan_blen_transfer/src/test_dma.c` to test the new APIs.

--- a/dts/bindings/dma/snps,designware-dma-axi.yaml
+++ b/dts/bindings/dma/snps,designware-dma-axi.yaml
@@ -20,6 +20,12 @@ properties:
   "#dma-cells":
     const: 1
 
+  iommus:
+    type: phandle-array
+    description: |
+      A list of phandle and IOMMU specifier pairs that describe the IOMMU
+      master interfaces of the device.
+
 # #dma-cells : Must be <1>.
 # The 1st cell specifies the hardware handshaking signal ID
 # Example of device-tree dma channel configuration:
